--- a/世界书发送插图的提示词示例.ejs
+++ b/世界书发送插图的提示词示例.ejs
@@ -3,7 +3,7 @@
   // 该脚本遍历角色列表，查找每个角色的插图索引，
   // 并按照 “角色名: 分类: 文件列表” 的格式输出。
 
-  // 1. 定义需要查找插图的角色列表
+  // 1. 定义需要查找插图的角色列表（下面改成你的角色的名称）（别的地方不要乱改，要改也要有ai辅助）
   const characters = ['洛千霜', '林语惊', '陈予欢'];
   
   // 2. 初始化变量
@@ -41,3 +41,4 @@
   }
 %>
 <%= finalOutput %>
+
